--- a/tox.ini
+++ b/tox.ini
@@ -16,4 +16,4 @@ commands = flake8 siphon tests
 setenv =
     PYTHONPATH = {toxinidir}
 
-commands = python setup.py test
+commands = py.test --cov siphon
