--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -10,6 +10,10 @@ jobs:
     - name: Stop MySQL
       run: |
         sudo /etc/init.d/mysql stop
+    - name: Initialize Python 3.7
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.7
     - name: Install Tox
       run: pip install tox
     - name: Run Docker
