--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,7 @@
-include AUTHORS.rst
-include CONTRIBUTING.rst
-include HISTORY.rst
 include LICENSE
-include README.rst
+recursive-include requirements *
+include README.md
+include requirements.txt
 
 recursive-include tests *
 recursive-exclude * __pycache__
@@ -10,4 +9,3 @@ recursive-exclude * *.py[co]
 
 recursive-include docs *.rst conf.py Makefile make.bat *.jpg *.png *.gif
 
-recursive-include requirements *
