--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -5,6 +5,9 @@ on: [push]
 jobs:
   build-and-test:
     runs-on: ubuntu-18.04
+    strategy:
+      matrix:
+        python-version: [ '3.7', '3.8', '3.9' ]
     steps:
     - uses: actions/checkout@v2
     - name: Stop MySQL
@@ -13,7 +16,7 @@ jobs:
     - name: Initialize Python 3.7
       uses: actions/setup-python@v1
       with:
-        python-version: 3.7
+        python-version: ${{ matrix.python-version }}
     - name: Install Tox
       run: pip install tox
     - name: Run Tests with Tox
