fix python versions in tests

--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -20,4 +20,4 @@ jobs:
     - name: Install Tox
       run: pip install tox
     - name: Run Tests with Tox
-      run: tox
+      run: py.test --cov=siphon
