--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install Tox
-      run: pip install -U pytest
+    - name: Install Pytest
+      run: make install
     - name: Run Tests
       run: py.test --cov=siphon
