--- a/docker/ci/docker-compose.yaml
+++ b/docker/ci/docker-compose.yaml
@@ -3,6 +3,8 @@ version: '3'
 services:
   mysql:
     image: mariadb:10.5.8
+    env_file:
+      - ../../tests/tests.env
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     ports:
@@ -15,6 +17,8 @@ services:
 
   postgres:
       image: postgres
+      env_file:
+        - ../../tests/tests.env
       environment:
         POSTGRES_USER: admin
         POSTGRES_PASSWORD: admin
