--- a/tests/tests.env
+++ b/tests/tests.env
@@ -2,7 +2,7 @@ MYSQL_HOST=mysql
 MYSQL_USER=root
 MYSQL_PASSWORD=admin
 MYSQL_db=siphon
-POSTGRES_HOST=postgres
-POSTGRES_USER=admin
-POSTGRES_PASSWORD=admin
-POSTGRES_db=siphon
+PG_HOST=postgres
+PG_USER=admin
+PG_PASSWORD=admin
+PG_DB=siphon
