--- a/tests/tests.env
+++ b/tests/tests.env
@@ -1,8 +1,8 @@
-MYSQL_HOST=mysql
+MYSQL_HOST=127.0.0.1
 MYSQL_USER=root
 MYSQL_PASSWORD=admin
 MYSQL_db=siphon
-PG_HOST=postgres
+PG_HOST=127.0.0.1
 PG_USER=admin
 PG_PASSWORD=admin
 PG_DB=siphon
