--- a/tests/tests.env
+++ b/tests/tests.env
@@ -1,8 +1,8 @@
-MYSQL_HOST=0.0.0.0
+MYSQL_HOST=localhost
 MYSQL_USER=root
 MYSQL_PASSWORD=admin
 MYSQL_db=siphon
-PG_HOST=0.0.0.0
+PG_HOST=localhost
 PG_USER=admin
 PG_PASSWORD=admin
 PG_DB=siphon
