--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -8,6 +8,27 @@ jobs:
     strategy:
       matrix:
         python-version: [ '3.7', '3.8', '3.9' ]
+    services:
+      mysql:
+        image: mariadb:10.5.8
+        ports:
+          - "3306:3306"
+        env:
+          MYSQL_DATABASE: siphon
+          MYSQL_ROOT_PASSWORD: admin
+        volumes:
+          - ./../mysql/init.sql/:/docker-entrypoint-initdb.d/init.sql
+
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_USER: admin
+          POSTGRES_PASSWORD: admin
+          POSTGRES_DB: siphon
+        ports:
+          - "5432:5432"
+        volumes:
+          - ./../postgres/:/docker-entrypoint-initdb.d/
     steps:
     - uses: actions/checkout@v2
     - name: Stop MySQL
