--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -17,7 +17,7 @@ jobs:
           MYSQL_DATABASE: siphon
           MYSQL_ROOT_PASSWORD: admin
         volumes:
-          - docker/mysql/init.sql/:/docker-entrypoint-initdb.d/init.sql
+          - ./docker/mysql/init.sql/:/docker-entrypoint-initdb.d/init.sql
 
       postgres:
         image: postgres
@@ -28,7 +28,7 @@ jobs:
         ports:
           - "5432:5432"
         volumes:
-          - docker/postgres/:/docker-entrypoint-initdb.d/
+          - ./docker/postgres/:/docker-entrypoint-initdb.d/
     steps:
     - uses: actions/checkout@v2
     - name: Stop MySQL
