--- a/tests/tests.env
+++ b/tests/tests.env
@@ -1,7 +1,7 @@
 MYSQL_HOST=mysql
 MYSQL_USER=root
 MYSQL_PASSWORD=admin
-MYSQL_db=siphon
+MYSQL_DB=siphon
 PG_HOST=postgres
 PG_USER=admin
 PG_PASSWORD=admin
