--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -5,21 +5,10 @@ on: [push]
 jobs:
   build-and-test:
     runs-on: ubuntu-18.04
-    strategy:
-      matrix:
-        python-version: [ '3.7', '3.8', '3.9' ]
     steps:
     - uses: actions/checkout@v2
     - name: Stop MySQL
       run: |
         sudo /etc/init.d/mysql stop
-    - name: Initialize Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install Requirements
-      run: make install
     - name: Run containers
-      run: docker-compose -f docker/dev/docker-compose.yaml up -d
-    - name: Run Tests
-      run: make test
+      run: docker-compose -f docker/dev/docker-compose.yaml up --abort-on-container-exit
