--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,7 @@ repos:
     hooks:
       - id: flake8
         additional_dependencies: [ flake8-bugbear, flake8-eradicate, pep8-naming, dlint ]
-        args: [ '--config=setup.cfg' ]
+        args: [ '--config=setup.cfg', '--max-line-length=100']
   -   repo: https://github.com/pre-commit/pre-commit-hooks
       rev: v3.4.0
       hooks:
